Added <header> block

--- a/index.html
+++ b/index.html
@@ -4,10 +4,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&family=Roboto:wght@100;300;400;700&display=swap"
+        rel="stylesheet">
     <title>Nine Cloud Hosting</title>
+    <link rel="stylesheet" href="assets/css/style.min.css">
 </head>
 
 <body>
+
+    <!-- Header -->
+    <header class="header">
+        <div class="container">
+            <div class="row">
+
+                <div class="col-4">
+                    <div class="logo">
+                        <img class="logo__img" src="assets/images/logo.svg" alt="">
+                        <div class="logo__text">Nine Cloud <span>Hosting</span></div>
+                    </div>
+                </div>
+
+                <div class="col-6">
+                    <nav class="nav">
+                        <a class="nav__link" href="#">hosting</a>
+                        <a class="nav__link" href="#">domanins</a>
+                        <a class="nav__link" href="#">features</a>
+                        <a class="nav__link" href="#">testimonials</a>
+                        <a class="nav__link" href="#">contacts</a>
+                    </nav>
+                </div>
+
+                <div class="col-2">
+                    <div class="login">
+                        <button class="btn btn__login">login</button>
+                    </div>
+                </div>
+
+            </div><!-- /.row -->
+        </div><!-- /.container -->
+    </header>
 
 </body>
 
