Added <Intro> block

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&family=Roboto:wght@100;300;400;700&display=swap"
         rel="stylesheet">
     <title>Nine Cloud Hosting</title>
-    <link rel="stylesheet" href="assets/css/style.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
@@ -46,6 +46,21 @@
             </div><!-- /.row -->
         </div><!-- /.container -->
     </header>
+
+    <!-- Intro -->
+    <div class="intro">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="intro__title">Strength in equality.The power of dreams</div>
+                    <div class="intro__text">Web hosting for $9.95/mo $2.95/mo. Sign up today and also get a free
+                        1-on-1 consultation to help you get started.</div>
+                    <button class="btn btn__intro">Get started</button>
+                    <a class="intro__learn-more" href="#">Learn more</a>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </body>
 
