Added <Hosting-main-features> block

--- a/index.html
+++ b/index.html
@@ -62,6 +62,42 @@
         </div>
     </div>
 
+    <!-- hosting-main-features -->
+    <div class="hosting-main-features">
+        <div class="container">
+            <div class="row">
+                <div class="col-4">
+                    <div class="hosting-main-features__item">
+                        <img class="hosting-main-features__img" src="assets/images/uptime.svg" alt="">
+                        <h2 class="hosting-main-features__title">99,9% UPtime guarantee</h2>
+                        <div class="hosting-main-features__text">Disk space in all packages has been increased by ten
+                            times!</div>
+                        <a class="hosting-main-features__read-more" href="#">Read More</a>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="hosting-main-features__item">
+                        <img class="hosting-main-features__img" src="assets/images/managed-services.svg" alt="">
+                        <h2 class="hosting-main-features__title">Managed Services</h2>
+                        <div class="hosting-main-features__text">Leave the set up, management and monitoring to us.
+                        </div>
+                        <a class="hosting-main-features__read-more" href="#">Read More</a>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="hosting-main-features__item">
+                        <img class="hosting-main-features__img" src="assets/images/cloud-services.svg" alt="">
+                        <h2 class="hosting-main-features__title">Cloud Services</h2>
+                        <div class="hosting-main-features__text">Reliable, high- performance cloud that meets your
+                            changing business
+                            demands.</div>
+                        <a class="hosting-main-features__read-more" href="#">Read More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
