Added <Domains> block

--- a/index.html
+++ b/index.html
@@ -48,22 +48,22 @@
     </header>
 
     <!-- Intro -->
-    <div class="intro">
+    <section class="intro">
         <div class="container">
-            <div class="row">
+            <div class="row align-items-center">
                 <div class="col-12">
-                    <div class="intro__title">Strength in equality.The power of dreams</div>
+                    <h2 class="intro__title">Strength in equality.The power of dreams</h2>
                     <div class="intro__text">Web hosting for $9.95/mo $2.95/mo. Sign up today and also get a free
                         1-on-1 consultation to help you get started.</div>
-                    <button class="btn btn__intro">Get started</button>
-                    <a class="intro__learn-more" href="#">Learn more</a>
+                    <button class="btn btn__intro" type="button">Get started</button>
+                    <a class="intro__learn-more" href="javascript://">Learn more</a>
                 </div>
-            </div>
-        </div>
-    </div>
+            </div><!-- /.row -->
+        </div><!-- /.container -->
+    </section>
 
-    <!-- hosting-main-features -->
-    <div class="hosting-main-features">
+    <!-- Hosting-main-features -->
+    <section class="hosting-main-features">
         <div class="container">
             <div class="row">
                 <div class="col-4">
@@ -72,7 +72,7 @@
                         <h2 class="hosting-main-features__title">99,9% UPtime guarantee</h2>
                         <div class="hosting-main-features__text">Disk space in all packages has been increased by ten
                             times!</div>
-                        <a class="hosting-main-features__read-more" href="#">Read More</a>
+                        <a class="hosting-main-features__read-more" href="javascript://">Read More</a>
                     </div>
                 </div>
                 <div class="col-4">
@@ -81,7 +81,7 @@
                         <h2 class="hosting-main-features__title">Managed Services</h2>
                         <div class="hosting-main-features__text">Leave the set up, management and monitoring to us.
                         </div>
-                        <a class="hosting-main-features__read-more" href="#">Read More</a>
+                        <a class="hosting-main-features__read-more" href="javascript://">Read More</a>
                     </div>
                 </div>
                 <div class="col-4">
@@ -91,12 +91,78 @@
                         <div class="hosting-main-features__text">Reliable, high- performance cloud that meets your
                             changing business
                             demands.</div>
-                        <a class="hosting-main-features__read-more" href="#">Read More</a>
+                        <a class="hosting-main-features__read-more" href="javascript://">Read More</a>
                     </div>
                 </div>
-            </div>
-        </div>
-    </div>
+            </div><!-- /.row -->
+        </div><!-- /.container -->
+    </section>
+
+    <!-- Domains -->
+    <section class="domains">
+        <div class="container">
+
+            <div class="row align-items-start">
+                <div class="col-12">
+                    <h2 class="domains__title">Search Domain</h2>
+                    <div class="domains__text">Save big on domain options like .com, .co, .biz, .net, .org and grab new
+                        domains like .xyz,
+                        .club, .guru, .email, .link, .today, and more!</div>
+                    <form class="form" action="/" method="post" autocomplete="on" target="_blank">
+                        <div class="form__group">
+                            <input class="input" type="text" id="sitename" name="sitename">
+                            <select class="select" id="domainExtension" name="domainExtension">
+                                <option value="com">.com</option>
+                                <option value="co">.co</option>
+                                <option value="biz">.biz</option>
+                                <option value="org">.org</option>
+                                <option value="net">.net</option>
+                                <option value="xyz">.xyz</option>
+                                <option value="club">.club</option>
+                                <option value="guru">.guru</option>
+                                <option value="email">.email</option>
+                                <option value="link">.link</option>
+                                <option value="today">.today</option>
+                            </select>
+                            <button class="btn btn__domains" type="submit">Find Domain</button>
+                        </div>
+                    </form>
+                </div>
+
+
+                <div class="col-1">
+                    <img class="domains__img" src="assets/images/find-domain.svg" alt="">
+                </div>
+                <div class="col-3">
+                    <h3 class="domains__step">find domain</h3>
+                    <div class="domains__step-description">
+                        <p>Etiam efficitur, risus sit amet sodales laoreet, sem mauris interdum lectus, nec luctus est.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-1">
+                    <img class="domains__img" src="assets/images/choose-plan.svg" alt="">
+                </div>
+                <div class="col-3">
+                    <h3 class="domains__step">choose a plan</h3>
+                    <div class="domains__step-description">
+                        <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-1">
+                    <img class="domains__img" src="assets/images/build-website.svg" alt="">
+                </div>
+                <div class="col-3">
+                    <h3 class="domains__step">build your website</h3>
+                    <div class="domains__step-description">
+                        <p>Curabitur imperdiet enim id faucibus sollicitudin.</p>
+                    </div>
+                </div>
+            </div><!-- /.row -->
+
+        </div><!-- /.container -->
+    </section>
 
 </body>
 
