Added <Features> block

--- a/index.html
+++ b/index.html
@@ -164,6 +164,80 @@
         </div><!-- /.container -->
     </section>
 
+    <!-- Features -->
+    <section class="features">
+        <div class="container">
+            <div class="row">
+
+                <div class="col-12">
+                    <h2 class="features__title">Features</h2>
+                </div>
+
+                <div class="col-1">
+                    <img class="features__img" src="assets/images/features/made-with-love.svg" alt="">
+                </div>
+                <div class="col-3">
+                    <h3 class="features__item-title">Made with love</h3>
+                    <div class="features__item-text">
+                        <p>Curabitur imperdiet enim id faucibus sollicitudin.</p>
+                    </div>
+                </div>
+
+                <div class="col-1">
+                    <img class="features__img" src="assets/images/features/databases.svg" alt="">
+                </div>
+                <div class="col-3">
+                    <h3 class="features__item-title">databases</h3>
+                    <div class="features__item-text">
+                        <p>Curabitur imperdiet enim id faucibus sollicitudin.</p>
+                    </div>
+                </div>
+
+                <div class="col-1">
+                    <img class="features__img" src="assets/images/features/vps-server.svg" alt="">
+                </div>
+                <div class="col-3">
+                    <h3 class="features__item-title">vps server</h3>
+                    <div class="features__item-text">
+                        <p>Phasellus aliquam arcu quis lectus aliquam, sed dignissim ligula efficitur.</p>
+                    </div>
+                </div>
+
+                <div class="col-1">
+                    <img class="features__img" src="assets/images/features/fully-secured.svg" alt="">
+                </div>
+                <div class="col-3">
+                    <h3 class="features__item-title">fully secured</h3>
+                    <div class="features__item-text">
+                        <p>Phasellus aliquam arcu quis lectus aliquam efficitur.</p>
+                    </div>
+                </div>
+
+                <div class="col-1">
+                    <img class="features__img" src="assets/images/features/daily-backups.svg" alt="">
+                </div>
+                <div class="col-3">
+                    <h3 class="features__item-title">daily backups</h3>
+                    <div class="features__item-text">
+                        <p>Aliquam nisl lectus, rhoncus nec ex vestibulum.</p>
+                    </div>
+                </div>
+
+                <div class="col-1">
+                    <img class="features__img" src="assets/images/features/cloud-hosted.svg" alt="">
+                </div>
+                <div class="col-3">
+                    <h3 class="features__item-title">cloud hosted</h3>
+                    <div class="features__item-text">
+                        <p>Etiam sagittis tellus at lacus cursus, non molestie nulla.</p>
+                    </div>
+                </div>
+
+
+            </div><!-- /.row -->
+        </div><!-- /.container -->
+    </section>
+
 </body>
 
 </html>
