Added <Plan> block

--- a/index.html
+++ b/index.html
@@ -238,6 +238,88 @@
         </div><!-- /.container -->
     </section>
 
+    <section class="plan">
+        <div class="container">
+            <div class="row justify-content-center">
+
+                <div class="col-12">
+                    <h2 class="plan__title">Pick your plan</h2>
+                    <div class="plan__text">
+                        <p>Upgrade, downgrade or cancel anytime.</p>
+                    </div>
+                </div>
+
+                <div class="col-3 p-0">
+                    <div class="plan-item">
+                        <div class="plan-item__header">
+                            <h3 class="plan-item__title">Personal</h3>
+                            <div class="plan-item__description">Perfect Pack for Small Business</div>
+                        </div>
+                        <div class="plan-item__body">
+                            <div class="plan-item__price">
+                                <sup>&dollar;</sup>25<span>/mo</span>
+                            </div>
+                            <div class="plan-item__option">3 Gb <span>of storage</span></div>
+                            <div class="plan-item__option">10 <span>repositories</span></div>
+                            <div class="plan-item__option">10 <span>parked domains</span></div>
+                            <div class="plan-item__option">25 FTP <span>accounts</span></div>
+
+                            <button class="btn btn--plan-item" type="button">order now</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-4 p-0">
+                    <div class="plan-item border-0">
+                        <div class="plan-item__header plan-item__header--dark">
+                            <h3 class="plan-item__title">business</h3>
+                            <div class="plan-item__description">Perfect Pack for Small Business</div>
+                        </div>
+                        <div class="plan-item__body plan-item__body--dark">
+                            <div class="plan-item__price">
+                                <sup>&dollar;</sup>45<span>/mo</span>
+                            </div>
+                            <div class="plan-item__option">3 Gb <span>of storage</span></div>
+                            <div class="plan-item__option">10 <span>repositories</span></div>
+                            <div class="plan-item__option">10 <span>parked domains</span></div>
+                            <div class="plan-item__option">25 FTP <span>accounts</span></div>
+
+                            <button class="btn btn--plan-item btn--red" type="button">order now</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-3 p-0">
+                    <div class="plan-item">
+                        <div class="plan-item__header">
+                            <h3 class="plan-item__title">Personal</h3>
+                            <div class="plan-item__description">Perfect Pack for Small Business</div>
+                        </div>
+                        <div class="plan-item__body">
+                            <div class="plan-item__price">
+                                <sup>&dollar;</sup>25<span>/mo</span>
+                            </div>
+                            <div class="plan-item__option">3 Gb <span>of storage</span></div>
+                            <div class="plan-item__option">10 <span>repositories</span></div>
+                            <div class="plan-item__option">10 <span>parked domains</span></div>
+                            <div class="plan-item__option">25 FTP <span>accounts</span></div>
+
+                            <button class="btn btn--plan-item" type="button">order now</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12">
+                    <div class="plan__text">
+                        <p>If you need help finding a plan that’s right for you,
+                            <a class="plan__link" href="javascript://">just chat with a live person</a>.
+                        </p>
+                    </div>
+                </div>
+            </div><!-- /.row -->
+        </div><!-- /.container -->
+    </section>
+
 </body>
 
 </html>
