--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
         </div><!-- /.container -->
     </section>
 
+    <!-- Plan -->
     <section class="plan">
         <div class="container">
             <div class="row justify-content-center">
