Added <Testimonials> block

--- a/index.html
+++ b/index.html
@@ -321,6 +321,33 @@
         </div><!-- /.container -->
     </section>
 
+    <!-- Testimonials -->
+    <section class="testimonials">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <h2 class="testimonials__title">Testimonials</h2>
+                    <div class="testimonials__subtitle">
+                        <p>Couple of words about this section</p>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <div class="testimonials__item">
+                        <img class="testimonials__logo" src="assets/images/testimonials/quotes.svg" alt="">
+                        <div class="testimonials__text">
+                            <p>The best and most reliable VPS account I have experienced from happy-hosting. I have
+                                never expected to have such a
+                                reliable host. Thanks to them very much for their unparalleled services with excellent
+                                administration.</p>
+                        </div>
+                        <img class="testimonials__img" src="assets/images/testimonials/review-1.jpg" alt="">
+                        <div class="testimonials__author">Oscar Wild, Pragmatic Solutions</div>
+                    </div>
+                </div>
+            </div><!-- /.row -->
+        </div><!-- /.container -->
+    </section>
+
 </body>
 
 </html>
