Added <Contacts> block

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                 </div>
             </div>
 
-            <div class="row row--blur justify-content-center">
+            <div class="row blur-effect justify-content-center">
                 <div class="col-7">
                     <div class="article">
                         <h3 class="article__title">How does the Internet Create Potential</h3>
@@ -409,7 +409,7 @@
                 </div>
             </div>
 
-            <div class="row row--blur justify-content-center">
+            <div class="row blur-effect justify-content-center">
                 <div class="col-7">
                     <div class="article">
                         <h3 class="article__title">How does the Internet Create Potential</h3>
@@ -438,6 +438,32 @@
                 </div>
             </div>
         </div><!-- /.container -->
+    </section>
+
+    <!-- Contacts -->
+    <section class="contacts">
+
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3024.437396581306!2d-74.00977602426951!3d40.708386737837166!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a17e44ef3f7%3A0xfcbdd8c795c39fb8!2zMTAwIFdpbGxpYW0gU3QsIE5ldyBZb3JrLCBOWSAxMDAzOCwg0KHQqNCQ!5e0!3m2!1sru!2ssk!4v1697206233360!5m2!1sru!2ssk"
+            width="100%" height="550" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+        <div class="container">
+            <div class="row">
+                <div class="contacts__inner">
+                    <h2 class="contacts__title">We are interested <br>
+                        in long-term cooperation</h2>
+                    <address class="contacts__address">
+                        <p>100 William Street</p>
+                        <p>New York, New York 10038</p>
+                    </address>
+                    <div class="contacts__time">Mon – Fri , 8 am – 5 pm</div>
+                    <a class="contacts__tel" href="tel:8006389996">800-638-9996, </a>
+                    <a class="contacts__tel" href="tel:5182924500">518-292-4500</a>
+                    <a class="contacts__mail" href="mailto:info@somecompany.com">info@somecompany.com</a>
+                </div>
+            </div>
+        </div>
     </section>
 
 </body>
