Added <Subscribe> block

--- a/index.html
+++ b/index.html
@@ -448,23 +448,56 @@
             width="100%" height="550" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-        <div class="container">
-            <div class="row">
-                <div class="contacts__inner">
-                    <h2 class="contacts__title">We are interested <br>
-                        in long-term cooperation</h2>
-                    <address class="contacts__address">
-                        <p>100 William Street</p>
-                        <p>New York, New York 10038</p>
-                    </address>
-                    <div class="contacts__time">Mon – Fri , 8 am – 5 pm</div>
-                    <a class="contacts__tel" href="tel:8006389996">800-638-9996, </a>
-                    <a class="contacts__tel" href="tel:5182924500">518-292-4500</a>
-                    <a class="contacts__mail" href="mailto:info@somecompany.com">info@somecompany.com</a>
-                </div>
-            </div>
+        <div class="contacts__inner">
+            <h2 class="contacts__title">We are interested <br>
+                in long-term cooperation</h2>
+            <address class="contacts__address">
+                <p>100 William Street</p>
+                <p>New York, New York 10038</p>
+            </address>
+            <div class="contacts__time">Mon – Fri , 8 am – 5 pm</div>
+            <a class="contacts__tel" href="tel:8006389996">800-638-9996, </a>
+            <a class="contacts__tel" href="tel:5182924500">518-292-4500</a>
+            <a class="contacts__mail" href="mailto:info@somecompany.com">info@somecompany.com</a>
         </div>
+
     </section>
+
+    <!-- Subscribe -->
+    <div class="subscribe">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-2">
+                    <div class="subscribe__text">follow us on</div>
+                </div>
+                <div class="col-3">
+                    <a class="subscribe__social-link" href="https://x.com/" target="_blank">
+                        <img class="subscribe__social-img" src="assets/images/social/twitter.svg" alt="">
+                    </a>
+                    <a class="subscribe__social-link" href="https://facebook.com/" target="_blank">
+                        <img class="subscribe__social-img" src="assets/images/social/facebook.svg" alt="">
+                    </a>
+                    <a class="subscribe__social-link" href="https://linkedin.com/" target="_blank">
+                        <img class="subscribe__social-img" src="assets/images/social/linkedin.svg" alt="">
+                    </a>
+                    <a class="subscribe__social-link" href="https://instagram.com/" target="_blank">
+                        <img class="subscribe__social-img" src="assets/images/social/instagram.svg" alt="">
+                    </a>
+                </div>
+                <div class="col-7">
+
+                    <form class="form form--subscribe" action="\" method="post" autocomplete="on" target="_blank">
+                        <div class="subscribe__text">subscribe</div>
+                        <div class="form__group form__group--subscribe">
+                            <input class="input input--subscribe" type="email" id="email" name="email"
+                                placeholder="Enter your e-mail here">
+                            <button class="btn btn--subscribe" type="submit">send</button>
+                        </div>
+                    </form>
+                </div>
+            </div><!-- /.row -->
+        </div><!-- /.container -->
+    </div><!-- /.subscribe -->
 
 </body>
 
