Added <Footer> block

--- a/index.html
+++ b/index.html
@@ -467,9 +467,11 @@
     <div class="subscribe">
         <div class="container">
             <div class="row align-items-center">
+
                 <div class="col-2">
                     <div class="subscribe__text">follow us on</div>
                 </div>
+
                 <div class="col-3">
                     <a class="subscribe__social-link" href="https://x.com/" target="_blank">
                         <img class="subscribe__social-img" src="assets/images/social/twitter.svg" alt="">
@@ -484,6 +486,7 @@
                         <img class="subscribe__social-img" src="assets/images/social/instagram.svg" alt="">
                     </a>
                 </div>
+
                 <div class="col-7">
 
                     <form class="form form--subscribe" action="\" method="post" autocomplete="on" target="_blank">
@@ -498,6 +501,50 @@
             </div><!-- /.row -->
         </div><!-- /.container -->
     </div><!-- /.subscribe -->
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+
+                <div class="col-2">
+                    <h4 class="footer__title">solutions</h4>
+                    <a class="footer__link" href="javascript://">Web Solutions Overview</a>
+                    <a class="footer__link" href="javascript://">Email Marketing</a>
+                    <a class="footer__link" href="javascript://">Website Promotion</a>
+                    <a class="footer__link" href="javascript://">eCommerce Website</a>
+                </div>
+
+                <div class="col-2">
+                    <h4 class="footer__title">Services</h4>
+                    <a class="footer__link" href="javascript://">Shared Hosting</a>
+                    <a class="footer__link" href="javascript://">Reseller Hosting</a>
+                    <a class="footer__link" href="javascript://">Cloud Managed VPS</a>
+                    <a class="footer__link" href="javascript://">Dedicated Servers</a>
+                </div>
+
+                <div class="col-2">
+                    <h4 class="footer__title">support</h4>
+                    <a class="footer__link" href="javascript://">Knowledge Base</a>
+                    <a class="footer__link" href="javascript://">Support Request</a>
+                    <a class="footer__link" href="javascript://">Client Area</a>
+                </div>
+
+                <div class="col-2">
+                    <h4 class="footer__title">Legal Terms</h4>
+                    <a class="footer__link" href="javascript://">Terms of Use</a>
+                    <a class="footer__link" href="javascript://">Privacy Policy</a>
+                </div>
+
+                <div class="col-4">
+                    <a class="footer__tel" href="tel:0443834389">(044) 383 4389</a>
+                    <a class="footer__email" href="mailto:support@cloudhost.com">support@cloudhost.com</a>
+                    <div class="footer__copyright">Copyright &copy; 2023 Cloud Host.All rights reserved.</div>
+                </div>
+
+            </div><!-- /.row -->
+        </div><!-- /.container -->
+    </footer>
 
 </body>
 
