Added <Testimonials Slider>

--- a/index.html
+++ b/index.html
@@ -332,17 +332,44 @@
                     </div>
                 </div>
                 <div class="col-12">
-                    <div class="testimonials__item">
-                        <img class="testimonials__logo" src="assets/images/testimonials/quotes.svg" alt="">
-                        <div class="testimonials__text">
-                            <p>The best and most reliable VPS account I have experienced from happy-hosting. I have
-                                never expected to have such a
-                                reliable host. Thanks to them very much for their unparalleled services with excellent
-                                administration.</p>
+                    <div class="testimonials__slider" id="testimonialsSlider">
+
+                        <div class="testimonials__item">
+                            <img class="testimonials__logo" src="assets/images/testimonials/quotes.svg" alt="">
+                            <div class="testimonials__text">
+                                <p>The best and most reliable VPS account I have experienced from happy-hosting. I have
+                                    never expected to have such a
+                                    reliable host. Thanks to them very much for their unparalleled services with
+                                    excellent
+                                    administration.</p>
+                            </div>
+                            <img class="testimonials__img" src="assets/images/testimonials/review-1.jpg" alt="">
+                            <div class="testimonials__author">Oscar Wild, Pragmatic Solutions</div>
                         </div>
-                        <img class="testimonials__img" src="assets/images/testimonials/review-1.jpg" alt="">
-                        <div class="testimonials__author">Oscar Wild, Pragmatic Solutions</div>
-                    </div>
+
+                        <div class="testimonials__item">
+                            <img class="testimonials__logo" src="assets/images/testimonials/quotes.svg" alt="">
+                            <div class="testimonials__text">
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta in porro unde magnam
+                                    minima quas, tempore necessitatibus odit nemo distinctio. Numquam praesentium maxime
+                                    incidunt distinctio. Minus nam voluptatem consectetur dolore?</p>
+                            </div>
+                            <img class="testimonials__img" src="assets/images/testimonials/tom-hardy.jpg" alt="">
+                            <div class="testimonials__author">Tom Hardy, Sun Microsystems</div>
+                        </div>
+
+                        <div class="testimonials__item">
+                            <img class="testimonials__logo" src="assets/images/testimonials/quotes.svg" alt="">
+                            <div class="testimonials__text">
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique necessitatibus
+                                    animi a, eveniet itaque nam aperiam non beatae consequuntur minima maxime provident
+                                    earum.</p>
+                            </div>
+                            <img class="testimonials__img" src="assets/images/testimonials/avril-sallivan.jpg" alt="">
+                            <div class="testimonials__author">Avril Sallivan, Fidelity</div>
+                        </div>
+
+                    </div><!-- #testimonialsSlider -->
                 </div>
             </div><!-- /.row -->
         </div><!-- /.container -->
@@ -547,6 +574,7 @@
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
+    <script src="assets/js/slick.min.js"></script>
     <script src="assets/js/app.js"></script>
 
 </body>
