--- a/index.html
+++ b/index.html
@@ -49,14 +49,29 @@
 
     <!-- Intro -->
     <section class="intro" id="intro">
+
+        <div class="intro__slider" id="introSlider">
+            <div>
+                <img class="intro__slider-photo" src="assets/images/intro/intro-bg-1.jpg" alt="">
+            </div>
+            <div>
+                <img class="intro__slider-photo" src="assets/images/intro/intro-bg-2.jpg" alt="">
+            </div>
+            <div>
+                <img class="intro__slider-photo" src="assets/images/intro/intro-bg-3.jpg" alt="">
+            </div>
+        </div>
+
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-12">
-                    <h2 class="intro__title">Strength in equality.The power of dreams</h2>
-                    <div class="intro__text">Web hosting for $9.95/mo $2.95/mo. Sign up today and also get a free
-                        1-on-1 consultation to help you get started.</div>
-                    <button class="btn btn__intro" type="button">Get started</button>
-                    <a class="intro__learn-more" href="javascript://">Learn more</a>
+                    <div class="intro__inner">
+                        <h2 class="intro__title">Strength in equality.The power of dreams</h2>
+                        <div class="intro__text">Web hosting for $9.95/mo $2.95/mo. Sign up today and also get a free
+                            1-on-1 consultation to help you get started.</div>
+                        <button class="btn btn__intro" type="button">Get started</button>
+                        <a class="intro__learn-more" href="javascript://">Learn more</a>
+                    </div>
                 </div>
             </div><!-- /.row -->
         </div><!-- /.container -->
