Added <Burger toggle menu>

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </div>
 
                 <div class="col-6 col-lg-2 lg-order-1 col-md2 col-sm-2 col-xs-2">
-                    <nav class="nav">
+                    <nav class="nav" id="nav">
                         <a class="nav__link" href="#" data-scroll="#hosting">hosting</a>
                         <a class="nav__link" href="#" data-scroll="#domains">domanins</a>
                         <a class="nav__link" href="#" data-scroll="#features">features</a>
