--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
 
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3024.437396581306!2d-74.00977602426951!3d40.708386737837166!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a17e44ef3f7%3A0xfcbdd8c795c39fb8!2zMTAwIFdpbGxpYW0gU3QsIE5ldyBZb3JrLCBOWSAxMDAzOCwg0KHQqNCQ!5e0!3m2!1sru!2ssk!4v1697206233360!5m2!1sru!2ssk"
-                width="100%" height="550" style="border:0;" allowfullscreen="" loading="lazy"
+                width="1000" height="550" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
 
             <div class="contacts__inner">
@@ -550,7 +550,7 @@
 
                     <div class="col-7 col-sm-12">
 
-                        <form class="form form--subscribe" action="\" method="post" autocomplete="on" target="_blank">
+                        <form class="form form--subscribe" action="/" method="post" autocomplete="on" target="_blank">
                             <div class="form__text">subscribe</div>
                             <div class="form__group form__group--subscribe">
                                 <input class="input input--subscribe" type="email" id="email" name="email"
